--- a/src/style/index.css
+++ b/src/style/index.css
@@ -60,6 +60,14 @@
         font-size: 20px;
     }
 }
+.main{
+    width: fit-content;
+    display: flex;
+    background-image: url("../../sourses/Ellipse-1-copy.png");
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+}
 .footer{
     position: absolute;
     left: 68px;
