--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,39 +1,39 @@
 @font-face {
-    font-family: 'Gilroy-Thin';
-    src: url('../../fonts/gilroy-thin.ttf')
+    font-family: "Gilroy-Thin";
+    src: url("../../fonts/gilroy-thin.ttf")
 }
 @font-face {
-    font-family: 'Gilroy-Light';
+    font-family: "Gilroy-Light";
     src: url("../../fonts/Gilroy-Light.otf");
 }
 @font-face {
-    font-family: 'Gilroy-Medium';
+    font-family: "Gilroy-Medium";
     src: url("../../fonts/gilroy-medium.ttf");
 }
 @font-face {
-    font-family: 'Gilroy-ExtraBold';
+    font-family: "Gilroy-ExtraBold";
     src: url("../../fonts/Gilroy-ExtraBold.otf");
 }
 @font-face {
-    font-family: 'Circe-Regular';
+    font-family: "Circe-Regular";
     src: url("../../fonts/Circe-Regular.ttf");
 }
 @font-face {
-    font-family: 'DINPro';
+    font-family: "DINPro";
     src: url("../../fonts/dinpro.otf");
 }
 @font-face {
-    font-family: 'DINPro-bold';
+    font-family: "DINPro-bold";
     src: url("../../fonts/dinpro_bold.otf");
 }
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: #222;
 }
 
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -44,23 +44,23 @@
     width: 153px;
     height: 26px;
     z-index: 2;
-    & > img{
+    & > img {
         height: 20px;
         object-fit: contain;
     }
-    & > span{
+    & > span {
         display: inline-block;
         height: 100%;
         width: 2px;
         background-color: #333;
     }
-    & > p{
-        font-family: 'Circe-Regular';
+    & > p {
+        font-family: "Circe-Regular";
         text-transform: uppercase;
         font-size: 20px;
     }
 }
-.main{
+.main {
     width: fit-content;
     display: flex;
     background-image: url("../../sourses/Ellipse-1-copy.png");
@@ -68,17 +68,17 @@
     position: relative;
     z-index: 0;
 }
-.footer{
+.footer {
     position: absolute;
     left: 68px;
     bottom: 13px;
     z-index: 2;
 }
 
-.environment{
+.environment {
     position: absolute;
 }
-.button{
+.button {
     display: flex;
     align-items: center;
     padding: 14px;
@@ -86,12 +86,12 @@
     border-radius: 81px;
     background-color: #ff6a9f;
 
-    & > .button-circle{
+    & > .button-circle {
         height: 60px;
     }
-    & > p{
+    & > p {
         flex: 1;
-        font-family: 'DINPro';
+        font-family: "DINPro";
         font-size: 28px;
     }
 }
