--- a/src/style/slide-3.css
+++ b/src/style/slide-3.css
@@ -1,31 +1,31 @@
-#third-slide .content-container{
+#third-slide .content-container {
     margin-left: 380px;
     margin-top: 170px;
     text-transform: uppercase;
-    font-family: 'Gilroy-Light';
-    & > p{
+    font-family: "Gilroy-Light";
+    & > p {
         margin-left: 8px;
         font-size: 27px;
         letter-spacing: 4px;
     }
-    & > h2{
+    & > h2 {
         position: relative;
         font-size: 109px;
         letter-spacing: 6px;
         z-index: 5;
     }
-    & b{
-        font-family: 'Gilroy-ExtraBold';
+    & b {
+        font-family: "Gilroy-ExtraBold";
     }
 }
-.bottle{
+.bottle {
     position: absolute;
     left: 1995px;
     bottom: -345px;
     transform: scale(0.5);
     z-index: 5;
 }
-.blocks{
+.blocks {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 150px 81px;
@@ -40,30 +40,30 @@
     font-size: 22px;
     line-height: 28px;
     text-transform: capitalize;
-    font-family: 'Gilroy-Medium';
+    font-family: "Gilroy-Medium";
 }
-.block-1{
+.block-1 {
     grid-area: 1 / 1 / 3 / 2;
     width: 413px;
     background-color: white;
     border-radius: 40px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.2);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
     padding: 69px 60px 58px 110px;
 
-    & img{
+    & img {
         position: absolute;
         top: -25px;
         left: 115px;
     }
 }
-.block-2{
+.block-2 {
     width: 250px;
     padding: 48px 32px 32px;
     background-color: white;
     border-radius: 40px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.2);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 
-    & img{
+    & img {
         position: absolute;
         top: -20px;
         left: 490px;
@@ -77,7 +77,7 @@
     color: white;
 }
 
-.pop-up{
+.pop-up {
     display: none;
     position: absolute;
     top: 0;
@@ -86,7 +86,7 @@
     background-color: rgba(30, 31, 34, 0.5);
     z-index: 1;
 }
-.pop-up-container{
+.pop-up-container {
     width: 822px;
     height: 573px;
     background-color: white;
@@ -97,9 +97,9 @@
     top: 110px;
     left: 175px;
 
-    & .heading{
+    & .heading {
         position: relative;
-        font-family: 'Gilroy-Medium';
+        font-family: "Gilroy-Medium";
         text-transform: uppercase;
         font-size: 27px;
         letter-spacing: 4px;
@@ -107,31 +107,31 @@
         margin-bottom: 133px;
     }
 }
-#cross{
+#cross {
     position: absolute;
     top: 40px;
     left: 750px;
 }
-#list-2{
+#list-2 {
     display: none;
 }
-.advantages{
+.advantages {
     position: relative;
     top: 58px;
     transition: 0.5s;
-    & p{
+    & p {
         font-size: 27px;
-        font-family: 'Gilroy-Medium';
+        font-family: "Gilroy-Medium";
     }
 }
-.number{
+.number {
     color: #8cc9e8;
     margin-top: 12px;
 }
-.advantag{
+.advantag {
     margin-top: 8px;
 }
-.pagination{
+.pagination {
     width: 100px;
     height: 18px;
     display: flex;
@@ -140,13 +140,13 @@
     position: relative;
     top: 130px;
 
-    & .point{
+    & .point {
         width: 13px;
         height: 13px;
         border: #222222 1px solid;
         border-radius: 50%;
     }
-    & .point.active{
+    & .point.active {
         background-color: #ff6a9f;;
     }
 }
